2000-10-03  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/linereader.c (get_string): Also clear wide
	string info if illegal_string.

2000-10-03  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/bits/stat.h: New file.

2000-10-02  Jakub Jelinek  <jakub@redhat.com>

	* elf/nextmod1.c (failing_rtld_next_use): Ensure it is not tail call
	optimized.

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: New file.

2000-10-02  Ralf Baechle  <ralf@gnu.org>

	* sysdeps/unix/sysv/linux/mips/sys/tas.h: Add missing .mips0 at the
	end of inline assembler code.

2000-10-02  Ulrich Drepper  <drepper@redhat.com>

	* include/features.h [__USE_FILE_OFFSET && !__REDIRECT]: Define
	__USE_LARGEFILE64 and __USE_LARGEFILE to 1 and not nothing.

2000-10-02  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h: Synch with Linux
	2.4.0-test9-pre8.

	* sysdeps/unix/sysv/linux/alpha/bits/resource.h: Add RLIMIT_LOCKS.

2000-10-01  Ralf Baechle  <ralf@gnu.org>

	* sysdeps/mips/dl-machine.h (RTLD_START): Fix computation of envp
	argument passed to _dl_init.

2000-09-30  Bruno Haible  <haible@clisp.cons.org>

	* locale/programs/charmap-dir.h: New file.
	* locale/programs/charmap-dir.c: New file.
	* locale/programs/linereader.h (lr_create): New declaration.
	* locale/programs/linereader.c (lr_create): New function, split out
	from lr_open.
	(lr_open): Tailcall lr_create.
	* locale/programs/locale.c: Include "charmap-dir.h". Don't include
	<unistd.h>.
	(xstrdup): New declaration.
	(more_help): Use xstrdup instead of strdup.
	(write_locales): Likewise. When encountering a symbolic link, call
	stat.
	(write_charmaps): Simplify using the charmap-dir.h functions.
	Use xstrdup instead of strdup.
	* locale/programs/charmap.c: Include "charmap-dir.h". Don't include
	<dirent.h> and <unistd.h>.
	(cmlr_open): New function.
	(charmap_read): Use cmlr_open instead of lr_open. Simplify using the
	charmap-dir.h functions.