@@ -1,3 +1,9 @@
+2000-10-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* argp/argp-help.c: Make sure we get the correct gettext and
+	dgettext definitions.
+	* argp/argp-parse.c: Likewise.
+
 2000-10-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/programs/linereader.c (get_string): Also clear wide
